--- a/src/styles/testimonials.css
+++ b/src/styles/testimonials.css
@@ -33,7 +33,9 @@
 
 .testimonial-image img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
+    display: block;
 }
 
 .testimonial-details {
